# grappa

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTEXT.md  README.md  TODO.md  env.example  grappa.sh  install.sh  main.py  pyproject.toml  release.sh
chat_manager/: __init__.py  chat_manager.py
client/: telegram_client.py
config/: __init__.py  settings.py
data/: __init__.py  models.py
grappa/: __init__.py  main.py
grappa/chat_manager/: __init__.py  chat_manager.py
grappa/client/: __init__.py  telegram_client.py
grappa/config/: __init__.py  settings.py
grappa/data/: models.py
grappa/message_parser/: __init__.py  markdown.py  message_manager.py
grappa/storage/: __init__.py  cache_storage.py
message_parser/: message_manager.py
storage/: cache_storage.py
tests/: __init__.py  conftest.py
tests/test_chat_manager/: __init__.py  test_chat_manager.py
tests/test_client/: test_telegram_client.py
tests/test_message_parser/: __init__.py  test_markdown.py  test_message_manager.py
