[tool.poetry]
name = "grappa"
version = "0.2.1"
description = "Telegram client CLI"
authors = ["Pavel Khmelinsky <hmepas@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hmepas/grappa"
packages = [{ include = "grappa" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
tgcrypto = "^1.2.5"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
click = "^8.1.7"
rich = "^13.7.0"
kurigram = "^2.2.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
grappa = "grappa.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black конфигурация
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort конфигурация
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

# mypy конфигурация
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["tests/"]

# flake8 конфигурация
[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__", ".git", "build", "dist"]

# pytest конфигурация
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
